new project/css/style.css
*{
  margin:0;
  padding:0;
  box-sizing:"border-box"
}

.navbar{
  height:10%;
  width:100%;
  background-color: blue;
}
.logo{
  width: 25%;
  background-color:green;
}
.logo a{
  width:100%;
  height:100%;
  align-item: center;
}
.logo a img{
   width: auto;
  height:auto;
}
.menu{
  width:75%;
  
}

@media (max-width:576px){
  .header {
    height: 7%;
    background-color: red;
  }
}

